--- a/annexe/annexe_2_mapreduce_visualisation/5_merge_client_immat.ipynb
+++ b/annexe/annexe_2_mapreduce_visualisation/5_merge_client_immat.ipynb
@@ -2,35 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "402a1f24-5800-4c86-802c-8c275e29be04",
+   "execution_count": null,
+   "id": "2ebf395b-31a2-4b62-8aaf-017fed658f59",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "import matplotlib.pyplot as plt\n",
     "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.functions import regexp_replace\n",
+    "from pyspark.sql.functions import regexp_extract, when, trim, col\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3850a755-7769-4fa8-bd99-c3d53dd16f4f",
+   "metadata": {},
+   "source": [
+    "# Initialisation de la session Spark"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ef5ce840-0772-49a7-8f16-0ab9322f1fdc",
+   "execution_count": null,
+   "id": "a30525cc-9f65-484e-8324-3cbba53db0de",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
-    "    .appName(\"Analyse Immatriculations\") \\\n",
+    "    .appName(\"MergeAnalyseCLientImmat\") \\\n",
     "    .config(\"spark.hadoop.hive.metastore.uris\", \"thrift://hive-metastore:9083\") \\\n",
     "    .enableHiveSupport() \\\n",
     "    .getOrCreate()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f56109d4-f7ad-4906-a1f2-89cbd637e4e1",
+   "metadata": {},
+   "source": [
+    "# Utilisation de la base de données Hive, et charge les données des tables traitées"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "72ca1caf-31e9-4a14-aef8-9f5742d90402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"USE concessionnaire\")\n",
+    "\n",
+    "clients_df = spark.sql(\"SELECT * FROM client_processed\")\n",
+    "immatriculations_df = spark.sql(\"SELECT * FROM immatriculations_processed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81d89168-028a-46ed-a2d0-473a3ecda757",
+   "metadata": {},
+   "source": [
+    "# Fusionner les tables sur la colonne 'Immatriculation'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "060da809-0f5e-41b9-9416-5a4393096ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = clients_df.join(immatriculations_df, \"Immatriculation\", \"inner\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6682dbe3-b3b3-4fb2-a985-9045f8c554b8",
+   "id": "7cb35c16-88a6-4eb8-be8c-615185ee2c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+---+-----+----+-------------------+---------------+---------------+--------+---------+-----------+--------+--------+-------+--------+-------+------+\n",
+      "|immatriculation|age|sexe |taux|situationfamilliale|nbenfantacharge|deuxiemevoiture|marque  |puissance|longueur   |nbplaces|nbportes|couleur|occasion|prix   |modele|\n",
+      "+---------------+---+-----+----+-------------------+---------------+---------------+--------+---------+-----------+--------+--------+-------+--------+-------+------+\n",
+      "|0 UI 76        |61 |Homme|419 |En Couple          |4              |true           |Mercedes|306      |très longue|5       |5       |rouge  |true    |70910.0|S500  |\n",
+      "|10 IM 37       |20 |Homme|1245|En Couple          |2              |false          |Jaguar  |197      |longue     |5       |5       |bleu   |false   |37100.0|X-Type|\n",
+      "|10 LB 49       |21 |Homme|502 |En Couple          |2              |false          |Volvo   |272      |très longue|5       |5       |rouge  |false   |50500.0|S80   |\n",
+      "|10 MF 39       |22 |Homme|1072|Célibataire        |0              |false          |Audi    |75       |courte     |5       |5       |noir   |false   |18310.0|A2    |\n",
+      "|10 VE 79       |41 |Homme|507 |En Couple          |1              |false          |Ford    |125      |longue     |5       |5       |bleu   |false   |23900.0|Mondeo|\n",
+      "|100 JQ 82      |50 |Homme|1213|En Couple          |1              |false          |BMW     |507      |très longue|5       |5       |noir   |false   |94800.0|M5    |\n",
+      "|100 MW 36      |36 |Homme|467 |En Couple          |3              |false          |Renault |245      |très longue|5       |5       |blanc  |false   |49200.0|Vel   |\n",
+      "|1000 HF 96     |32 |Homme|245 |En Couple          |0              |false          |Ford    |125      |longue     |5       |5       |blanc  |true    |16730.0|Mondeo|\n",
+      "|1001 NX 52     |26 |Homme|459 |Célibataire        |1              |false          |Volvo   |272      |très longue|5       |5       |blanc  |false   |50500.0|S80   |\n",
+      "|1001 OW 93     |30 |Homme|451 |En Couple          |0              |true           |Peugeot |75       |courte     |5       |5       |noir   |false   |13750.0|1007  |\n",
+      "+---------------+---+-----+----+-------------------+---------------+---------------+--------+---------+-----------+--------+--------+-------+--------+-------+------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df.show(n=10, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a953b914",
+   "metadata": {},
+   "source": [
+    "# Analyse du fichier merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e562e1",
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +148,7 @@
     }
    ],
    "source": [
-    "spark.sql(\"USE concessionnaire\")\n",
-    "client_immat_df = spark.sql(\"SELECT * FROM client_immatriculation_merged\")\n",
+    "client_immat_df = merged_df\n",
     "\n",
     "nombre_total_lignes = client_immat_df.count()\n",
     "print(nombre_total_lignes)\n",
@@ -68,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b44322f8-7bb6-4fb3-a01d-93238033ba77",
+   "id": "99f4b243",
    "metadata": {},
    "source": [
     "# Vérification des nuls"
@@ -76,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1f26f0a0-1117-4547-905d-def4b9ae31b2",
+   "execution_count": null,
+   "id": "df56fe46",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd53dce-f23b-4f44-887a-c2dc8e3f3f51",
+   "id": "632960d6",
    "metadata": {},
    "source": [
     "# Vérifications des valeurs de Age"
@@ -127,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "10cee2f8-3d56-41c0-a297-295e699885b1",
+   "execution_count": null,
+   "id": "d9f29572",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb47f2de-6a87-48e7-b17f-1eff4d25b54c",
+   "id": "5e37f9b3",
    "metadata": {},
    "source": [
     "# Vérification des valeurs de Marque"
@@ -224,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6d325c3a-87ee-4aef-b67a-304311204a66",
+   "execution_count": null,
+   "id": "04d0124b",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "385ad80f-e515-4d79-8fa3-c802067ac3f2",
+   "id": "2d25a0e0",
    "metadata": {},
    "source": [
     "# Vérification des valeurs de Modele"
@@ -273,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1edb222d-74b7-4b8c-87c3-027f640baf09",
+   "execution_count": null,
+   "id": "0a37ef41",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfbdba2e-d7ef-4cf9-bfb7-f9757ee82f42",
+   "id": "938c968b",
    "metadata": {},
    "source": [
     "# Vérification des valeurs de longeur"
@@ -331,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "bb96a2c0-92cb-473b-b5d9-ad1819a213d4",
+   "execution_count": null,
+   "id": "d9f826c1",
    "metadata": {},
    "outputs": [
     {
@@ -357,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e2b7f320-7436-498b-9a29-ef5d35cfccbc",
+   "execution_count": null,
+   "id": "02ed0d86",
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "895a8890-70be-4af0-84af-3fecee9781ec",
+   "execution_count": null,
+   "id": "35e8be92",
    "metadata": {},
    "outputs": [
     {
@@ -438,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "96381aeb-5c01-4d65-bec0-6595de9d7af2",
+   "execution_count": null,
+   "id": "a538c6c1",
    "metadata": {},
    "outputs": [
     {
@@ -471,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "805eb60f-234a-4a22-9211-80ba2784f83c",
+   "execution_count": null,
+   "id": "570c00c3",
    "metadata": {},
    "outputs": [
     {
@@ -500,8 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2d604b8a-1593-46ca-a523-eb7bb564e53f",
+   "execution_count": null,
+   "id": "d95debb6",
    "metadata": {},
    "outputs": [
     {
@@ -530,8 +619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d50f1fb9-a7a0-4df0-bb91-35b1054442be",
+   "execution_count": null,
+   "id": "98103c00",
    "metadata": {},
    "outputs": [
     {
@@ -589,8 +678,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "87e05415-ece2-4241-92fc-677eae92db16",
+   "execution_count": null,
+   "id": "7f58a5cf",
    "metadata": {},
    "outputs": [
     {
@@ -654,8 +743,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "07862167-3382-4414-9762-37f8a8b2bf13",
+   "execution_count": null,
+   "id": "f058c488",
    "metadata": {},
    "outputs": [
     {
@@ -700,8 +789,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c6a4b8a5-0186-4dc0-9cc0-581c2f053f58",
+   "execution_count": null,
+   "id": "ed9a4c67",
    "metadata": {},
    "outputs": [
     {
@@ -750,8 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9c460602-74a1-4f5c-becf-c918cbeaef64",
+   "execution_count": null,
+   "id": "2daa9e8c",
    "metadata": {},
    "outputs": [
     {
@@ -782,8 +871,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "138f90be-a453-479b-bf09-9cec170d154d",
+   "execution_count": null,
+   "id": "02a148e2",
    "metadata": {},
    "outputs": [
     {
@@ -839,8 +928,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "9a3bd2e5-5038-414f-bf68-5dc0dc09370f",
+   "execution_count": null,
+   "id": "33fcbbf8",
    "metadata": {},
    "outputs": [
     {
@@ -865,8 +954,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "f38f38f7-c7ed-405f-81ba-401b0fd448e0",
+   "execution_count": null,
+   "id": "d8823d2e",
    "metadata": {},
    "outputs": [
     {
@@ -898,8 +987,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "7a06a835-8372-4f0d-a692-d92bece7c0ae",
+   "execution_count": null,
+   "id": "65a9f166",
    "metadata": {},
    "outputs": [
     {
@@ -991,8 +1080,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "30ada9a9-3467-42b9-96c3-803adf701678",
+   "execution_count": null,
+   "id": "8d239926",
    "metadata": {},
    "outputs": [
     {
@@ -1024,8 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "f935e7fa-9c3c-4a53-96fc-5285d1239aff",
+   "execution_count": null,
+   "id": "6982e744",
    "metadata": {},
    "outputs": [
     {
@@ -1061,8 +1150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "ebb1b26f-401f-43e7-90b5-69171ecebdda",
+   "execution_count": null,
+   "id": "b5289050",
    "metadata": {},
    "outputs": [
     {
@@ -1094,6 +1183,26 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c6c0b86",
+   "metadata": {},
+   "source": [
+    "# Enregistrer le DataFrame fusionné sous forme de table Hive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5b28bee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.createOrReplaceTempView(\"merged_view\")\n",
+    "spark.sql(\"DROP TABLE IF EXISTS client_immatriculation_merged\")\n",
+    "spark.sql(\"CREATE TABLE client_immatriculation_merged AS SELECT * FROM merged_view\")"
    ]
   }
  ],
